src/pages/TripsPage.css
.trips-filter {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 180px;
  padding: 20px;
  background-color: var(--color-blue-400);
}

.trips-filter__form {
  display: flex;
  flex-wrap: wrap;
  gap: 20px 25px;
  width: 100%;
  max-width: var(--container-width);
}

.trips-filter__search {
  width: 100%;
  max-width: 350px;
}

.trips-filter__search input {
  padding-left: 50px;
  background-color: var(--color-white);
  background-image: url('../assets/images/search.svg');
  background-repeat: no-repeat;
  background-position: 15px 50%;
  background-size: 22px;
}

.trips {
  padding: 60px 20px;
}

.trip-list {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(260px, auto));
  justify-content: center;
  gap: 30px;
  max-width: var(--container-width);
  margin: 0 auto;
  padding: 0;
  list-style: none;
}

